<resources>
    <string name="app_name">MobileComputingAssignment2</string>
    <string name="addition_game_for_smart_kids">Memory Game for Smart Kids</string>
    <string name="start_game">Start Game!</string>
    <string name="settings">Settings</string>
    <string name="sound">Sound:</string>
    <string name="on">On</string>
    <string name="music">Music:</string>
    <string name="high_scores">High Scores</string>
    <string name="player_name_one">Ben</string>
    <string name="player_score_one">30</string>
    <string name="player_name_two">George</string>
    <string name="player_score_two">25</string>
    <string name="player_name_three">Rebecca</string>
    <string name="player_score_three">20</string>
    <string name="player_name_four">Greg</string>
    <string name="player_score_four">15</string>
    <string name="player_name_five">Hannah</string>
    <string name="player_score_five">10</string>
    <string name="match_the_colours">Match the Colours!</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="input">Input</string>
    <string name="guess">Guess</string>
    <string name="clear_the_numbers_gosh">Clear the numbers! Gosh!</string>
    <string name="_1">#1</string>
    <string name="_2">#2</string>
    <string name="_3">#3</string>
    <string name="_4">#4</string>
    <string name="_5">#5</string>
    <string name="off">Off</string>
</resources>
