<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/settings_button_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/settings"
        android:onClick="buttonClicked_settings"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addition_game_for_smart_kids"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_the_numbers_gosh"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:layout_marginTop="32dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:onClick="buttonClicked_gameStart"/>

</LinearLayout>