<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:text="@string/settings" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music" />

            <Button
                android:id="@+id/button_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on" />
        </TableRow>

    </TableLayout>
</LinearLayout>